fixed the header menu breaks in certain breakpoint range

--- a/src/client/styles/sections/_header.sass
+++ b/src/client/styles/sections/_header.sass
@@ -43,14 +43,13 @@
         padding: 19px 20px
       span.fa
         color: lighten($bg-black, 30%)
-        +font-size(18)
-        @include breakpoint($bp-sm4)
+        @include breakpoint($bp-sm5)
           +font-size(14)
       .fa-caret-down
         margin-left: 10px
       .fa-briefcase, .fa-user, .fa-phone
         display: none
-        @include breakpoint($bp-sm4)
+        @include breakpoint($bp-sm5)
           display: inline-block
           margin-right: 10px
     &:hover
